--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Backend Test
-        run: docker compose -f docker-compose.yml run --rm backend sh -c "python manage.py wait_for_db && python manage.py test"
+        run: docker compose -f docker compose.yml run --rm backend sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Backend Lint
-        run: docker compose -f docker-compose.yml run --rm backend sh -c "flake8"
+        run: docker compose -f docker compose.yml run --rm backend sh -c "flake8"
